# olio-ohjelmointi

./: .gitignore
h1/H1/: CMakeLists.txt  funktiot.cpp  funktiot.h  main.cpp
h2/H2a/: CMakeLists.txt  car.cpp  car.h  main.cpp  rectangle.cpp  rectangle.h  student.cpp  student.h
h2b/h2b/: car.cpp  car.h  main.cpp
h3a/h3a/: chef.cpp  chef.h  italianchef.cpp  italianchef.h  main.cpp
h3b/h3b/: animal.cpp  animal.h  dog.cpp  dog.h  main.cpp
h4/h4/: CMakeLists.txt  car.cpp  car.h  engine.cpp  engine.h  main.cpp  wheel.cpp  wheel.h
h5/h5/: classa1.cpp  classa1.h  classa2.cpp  classa2.h  main.cpp
h6a/h6a/: CMakeLists.txt  main.cpp
h6b/h6b/: exampleclass.cpp  exampleclass.h  main.cpp
h7/h7/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
